Corrected contrast issue with some link tags

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -176,6 +176,7 @@
 }
 
 .upgrd_items .items a {
+  background-color: white;
   color: blue;
 }
 
